@@ -31,6 +31,7 @@ Version 1.1.8 work in progress
 - Bug #2516: CTimestamp::getDate() produced wrong output with the default timestamp (Y!!)
 - Bug #2538: Fixed the bug that AR may join with incorrect columns (Qiang)
 - Bug #2544: Fixed the bug that setting CJuiDatePicker.language to be 'en' will use wrong language (Qiang)
+- Bug #2574: Fixed the bug that overriding CActiveRecord::primaryKey() does not set the isPrimaryKey flag for columns (Qiang)
 - Bug: CMapIterator current key wasn't initialized properly (Sam Dark, Detonator)
 - Bug: Controller generated with Gii CRUD wasn't able to handle non-integer primary key (Sam Dark)
 - Bug: Query caching may give incorrect caching results when bindParam or bindValue is used (Qiang)
